fix: padding-left accordeons on mobile

--- a/app/css/styles.css
+++ b/app/css/styles.css
@@ -2008,9 +2008,14 @@ figure.testimonial figcaption small {
 
 .acc-panel {
   max-height: 0;
-  padding-left: 46px;
   overflow: hidden;
   transition: max-height 0.2s ease-out;
+}
+
+@media (min-width: 1024px) {
+  .acc-panel {
+    padding-left: 46px;
+  }
 }
 
 .acc-button:after {
